After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754235 - playsinkconvertbin: regression after removing accept-caps handler
playsinkconvertbin: regression after removing accept-caps handler
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal blocker
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-28 12:43 UTC by Thiago Sousa Santos
Modified: 2015-08-28 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
playsinkconvertbin: implement accept-caps handler (2.51 KB, patch)
2015-08-28 12:44 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2015-08-28 12:43:43 UTC
Need to implement a proper one as the default will just push the query into the internally linked elements. Depending on the setup it might just be identity which will only proxy it downstream, making the query only return true if the downstream can actually receive the caps. This would make the case where the converting elements would need to act fail prematurely.
Comment 1 Thiago Sousa Santos 2015-08-28 12:44:16 UTC
Created attachment 310180 [details] [review]
playsinkconvertbin: implement accept-caps handler

The default one will just go through the internal elements which might
just be identity when it is in passthrough which will lead to the query
being handled by the downstream sink, ignoring all that playsinkconvertbin
could actually handle and convert.
Comment 2 Thiago Sousa Santos 2015-08-28 15:16:59 UTC
commit 76d26a60bd761780bdb4865ab6a5950323086e01
Author: Thiago Santos <thiagoss@osg.samsung.com>
Date:   Fri Aug 28 09:36:15 2015 -0300

    playsinkconvertbin: implement accept-caps handler
    
    The default one will just go through the internal elements which might
    just be identity when it is in passthrough which will lead to the query
    being handled by the downstream sink, ignoring all that playsinkconvertbin
    could actually handle and convert.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754235